Fix bug related to Font Awesome icons not showing up by disabling a CSS reset rule to set font-weight across the entire page

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -179,7 +179,8 @@
     padding: 0;
     box-sizing: border-box;
     font: inherit;
-    font-weight: var(--fw-normal);
+	/* turned off because Font Awesome wouldn't load some icons */
+    /* font-weight: var(--fw-normal); */
     line-height: 2rem;
 }
 
